--- a/groplan/pubspec.yaml
+++ b/groplan/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    rflutter_alert:
 
 
   # The following adds the Cupertino Icons font to your application.
