--- a/groplan/pubspec.yaml
+++ b/groplan/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    rflutter_alert:
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  rflutter_alert:
+  table_calendar:
 
 dev_dependencies:
   flutter_test:
