--- a/groplan/pubspec.yaml
+++ b/groplan/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   cupertino_icons: ^0.1.3
   rflutter_alert:
   table_calendar:
+  firebase_core: ^0.5.2+1
+  flutter_local_notifications:
+  cloud_firestore: ^0.14.3+1
+  firebase_auth: ^0.18.3+1
 
 dev_dependencies:
   flutter_test:
