--- a/groplan/pubspec.yaml
+++ b/groplan/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^0.18.3+1
   shared_preferences: ^0.5.12+4
   flutter_launcher_icons: ^0.8.1
+  flushbar: ^1.10.4
 
 flutter_icons:
   android: true
